--- a/src/Pages/TeacherList/styles.css
+++ b/src/Pages/TeacherList/styles.css
@@ -1,50 +1,3 @@
-#page-teacher-list {
-  width: 100vw;
-  height: 100vh;
-}
-
-.page-header {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--color-primary);
-}
-
-.page-header .top-bar-container {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--color-text-primary);
-  padding: 1.6rem 0;
-}
-
-.page-header .top-bar-container a {
-  height: 3.2rem;
-  transition: opacity 0.2s;
-}
-
-.page-header .top-bar-container a:hover {
-  opacity: 0.6;
-}
-
-.page-header .top-bar-container > img {
-  height: 1.6rem;
-}
-
-.page-header .header-content {
-  width: 90%;
-  margin: 0 auto;
-  position: relative;
-  margin: 3.2rem auto;
-}
-
-.page-header .header-content strong {
-  font: 700 3.6rem Archivo;
-  line-height: 4.2rem;
-  color: var(--color-title-in-primary);
-}
-
 #search-teachers {
   margin-top: 3.2rem;
 }
@@ -55,6 +8,10 @@
 
 #search-teachers .input-block {
   position: relative;
+}
+
+#search-teachers .input-block + .input-block {
+  margin-top: 1.4rem;
 }
 
 #search-teachers .input-block label {
@@ -77,5 +34,33 @@
   width: calc(100% - 3.2rem);
   height: 2px;
   content: '';
-  background: var()
+  background: var(--color-primary-light);
+  position: absolute;
+  left: 1.6rem;
+  right: 1.6rem;
+  bottom: 0;
+}
+
+@media( min-width: 700px ) {
+  #page-teacher-list {
+    max-width: 100%;
+  }
+
+  #search-teachers {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 16px;
+    position: absolute;
+    bottom: -35px;
+  }
+
+  #search-teachers .input-block + .input-block {
+    margin-top: 0;
+  }
+
+  #page-teacher-list main {
+    padding: 3.2rem 0;
+    max-width: 740px;
+    margin: 0 auto;
+  }
 }
