--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -1,8 +1,3 @@
-#page-teacher-list main {
-  margin: 3.2rem auto;
-  width: 90%;
-}
-
 .teacher-item {
   background: var(--color-box-base);
   border: 1px solid var(--color-line-int-white);
@@ -36,8 +31,11 @@
 
 .teacher-item header span {
   font-size: 1.6rem;
-  display: block;
   margin-top: 0.4rem;
+}
+
+.teacher-item header span + span {
+  margin-left: 1rem;
 }
 
 .teacher-item > p {
@@ -62,7 +60,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -75,9 +73,10 @@
   align-items: center;
   justify-content: space-evenly;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover{
+.teacher-item footer a:hover{
   background: var(--color-secundary-dark);
 }
 
